# SkinningAnnimation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/win64/: glfw3.lib
main/: demo.cpp  imgui_demo.cpp  skinning_animation.cpp
res/shader/: bg.fs  bg.vs
resource/MorphPrimitivesTest/: MorphPrimitivesTest.gltf
resource/SimpleAnimation/: SimpleAnimation.gltf
shader/: avatar_fs.glsl  avatar_notex_skin_fs.glsl  avatar_notex_skin_vs.glsl  avatar_notex_vs.glsl  avatar_tex_skin_fs.glsl  avatar_tex_skin_vs.glsl  avatar_tex_vs.glsl  avatar_vs.glsl  depth_fs.glsl  depth_gs.glsl  depth_vs.glsl  ground_vs.glsl  multilight_fs.glsl  multilight_vs.glsl
src/common/: logging.cpp  logging.h  shader.cpp  shader.h  utility.cpp  utility.h
src/graphic/: geometry.cpp  geometry.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  utility.cpp  utility.h
src/gui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  scene.cpp  scene.h  ui.cpp  ui.h
